@@ -15,6 +15,7 @@ Phoronix Test Suite (Git)
 - phoromatic: Fix for removing a system from all groups on the "system group editing" systems page
 - phoromatic: Allow per-system overriding of whether automatic power-offs of system are permitted
 - phoromatic: Get rid of block-poweroff file check in client module now that it can be done per-system from server-side
+- phoromatic: Allow WoL power-ups for honoring benchmark tickets
 
 Phoronix Test Suite 5.6.0-Dedilovo
 24 March 2015
